# get_specific_text_on_email1.0

./: base_page.py  book_orders.py  configuration.json  main.py  outlook_api.py  pyproject.toml
